# Copyright by The HDF Group. All rights reserved.

# This is the Makefile.am for the HDF5 BITROUND filter library. This allows
# the use of BITROUND compression/decompression on HDF5 datasets.
#
# Ed Hartnett 1/15/19

# This is where HDF5 wants us to install plugins.
plugindir = @HDF5_PLUGIN_DIR@

# This linker flag specifies libtool version info.
# See http://www.gnu.org/software/libtool/manual/libtool.html#Libtool-versioning
# for information regarding incrementing `-version-info`.
libh5granularbr_la_LDFLAGS = -version-info 0:0:0

# The libh5granularbr library for plugin module.
# Build it as shared library.
#plugin_LTLIBRARIES = libh5granularbr.la
#libh5granularbr_la_SOURCES = H5Zgranularbr.c
